--- a/ST695_SPD_Analysis.qmd
+++ b/ST695_SPD_Analysis.qmd
@@ -388,30 +388,27 @@ formula_W <- as.formula(paste("Y_W ~ (",
     paste(WP_factors, collapse = " + "),")^2"))
 
 X_W <- model.matrix(formula_W, data = Yw_data)
-# Replicate each row 4 times
+# Replicate each row 4 times and drop row 20.
 X_W <- X_W[rep(1:nrow(X_W), each = 4), ][-20, ]
 
-# Drop row 20
-X_W_rep <- X_W_rep[-20, ]
 Y_W <- rep(Yw_data$Y_W, each = 4)[-20]
 df_W <- data.frame(Y_W, X_W)
-
-#Linear Model Fit for W Model
-W_Model <- summary(lm(formula_W, data = Yw_data))
-W_Model
-
 
 #S-W Model
 #Create model matrix for S-W Model
 X_SW <- X_S[, SP_effects_names]
 Y_SW <- Y_S - Y_W
-df_SW <- data.frame(Y_SW, X_SW)
-formula_SW <- as.formula(
-    paste("Y_SW ~", paste(colnames(X_SW), collapse = " + ")))
-#Linear Model Fit for S-W Model
+df_SW <- data.frame(Y_SW, X_SW, check.names = FALSE)
+  formula_SW <- as.formula(
+  "Y_SW ~ D + R + `D:R` + `T:D` + `T:R` + `P:D` + `P:R` + `S:D` + `S:R`")
+
+cat("Linear Model Fit for W Model", "\n")
+W_Model <- summary(lm(formula_W, data = Yw_data))
+W_Model
+cat("\n")
+cat("Linear Model Fit for SW Model", "\n")
 SW_Model <- summary(lm(formula_SW, data = df_SW))
-
-
+SW_Model
 ```
 
 
